--- a/springConverter/src/main/resources/templates/page.html
+++ b/springConverter/src/main/resources/templates/page.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="Content-Type" content="IE=edge">
         <meta name="viewport" content="text/html; width=device-width, initial-scale=1.0">
         <title>Convertor</title>
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" th:href="@{css/normalize.css}">
+        <link rel="stylesheet" th:href="@{css/style.css}">
     </head>
 
     <body>
