--- a/springConverter/src/main/resources/public/css/style.css
+++ b/springConverter/src/main/resources/public/css/style.css
@@ -209,3 +209,9 @@ h2 {
     background: rgba(0, 0, 0, 0.06);
     box-shadow: inset 0px 4px 12px 9px rgba(0, 0, 0, 0.25);
 }
+
+
+.samplee {
+    background-color: #FFFFFF;
+    color: #000000;
+}
