--- a/springConverter/src/main/resources/public/css/style.css
+++ b/springConverter/src/main/resources/public/css/style.css
@@ -212,6 +212,35 @@ h2 {
 
 
 .samplee {
+    display: none;
     background-color: #FFFFFF;
     color: #000000;
 }
+
+/* hover для выделения столбца */
+
+tbody {
+    position: relative;
+}
+
+th {
+    position: relative;
+}
+
+th span::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 400%;
+
+    content: '';
+    opacity: 0;
+    outline: 2px #FFFFFF solid;
+}
+
+th span:hover::after {
+   opacity: 1;
+}
+
+/* hover для выделения столбца  */
