--- a/springConverter/src/main/resources/public/css/style.css
+++ b/springConverter/src/main/resources/public/css/style.css
@@ -160,6 +160,10 @@ h2 {
 }
 
 .main_menu-bth {
+
+
+
+    margin-bottom: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
     width: 238px;
@@ -173,6 +177,24 @@ h2 {
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
+}
+
+.main_menu-bth:disabled {
+    opacity: 0.5;
+    cursor: default;
+}
+
+.width_meta {
+    width: 145px;
+}
+
+.addit_bth {
+    width: auto;
+    padding: 5px 20px;
+}
+
+.addit_bth:not(:last-child) {
+    margin-right: 10px;
 }
 
 
@@ -206,6 +228,10 @@ h2 {
 .main_field-input {
     padding: 25px 175px 25px 175px;
 
+    overflow-x: auto;
+    overflow-y: hidden;
+
+
     background: rgba(0, 0, 0, 0.06);
     box-shadow: inset 0px 4px 12px 9px rgba(0, 0, 0, 0.25);
 }
@@ -225,6 +251,8 @@ tbody {
 
 th {
     position: relative;
+    padding: 10px 50px;
+    white-space: nowrap;
 }
 
 th span::after {
@@ -239,8 +267,51 @@ th span::after {
     outline: 2px #FFFFFF solid;
 }
 
+.select_column::after{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 400%;
+
+    content: '';
+    opacity: 1;
+    outline: 2px #FFFFFF solid;
+}
+
 th span:hover::after {
    opacity: 1;
 }
 
+tr:not(:last-child) {
+    border-bottom: 4px #FFFFFF solid;
+}
+
+td {
+    text-align: center;
+    padding: 5px;
+    white-space: nowrap;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+.no_padding{
+    padding: 2px;
+}
+
 /* hover для выделения столбца  */
+
+
+.cust_input {
+    width: 130px;
+}
+
+.fill_width {
+    width: 238px;
+}
+
+.outline {
+    outline: 2px #000000 solid;
+}
