--- a/springConverter/src/main/resources/public/css/style.css
+++ b/springConverter/src/main/resources/public/css/style.css
@@ -1,49 +1,3 @@
-@font-face {
-    font-family: 'Montserrat';
-    src: local('Montserrat-Regular'), url("./fonts/Montserrat-Regular.woff2") format('woff2'),
-        url("./fonts/Montserrat-Regular.woff") format('woff');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: local('Montserrat-Medium'), url("./fonts/Montserrat-Medium.woff2") format('woff2'),
-        url("./fonts/Montserrat-Medium.woff") format('woff');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: local('Montserrat-Bold'), url("./fonts/Montserrat-Bold.woff2") format('woff2'),
-        url("./fonts/Montserrat-Bold.woff") format('woff');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: local('Montserrat-SemiBold'), url("./fonts/Montserrat-SemiBold.woff2") format('woff2'),
-        url("./fonts/Montserrat-SemiBold.woff") format('woff');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: local('Montserrat-ExtraBold'), url("./fonts/Montserrat-ExtraBold.woff2") format('woff2'),
-        url("./fonts/Montserrat-ExtraBold.woff") format('woff');
-    font-weight: 800;
-    font-style: normal;
-    font-display: swap;
-}
-
-
 
 html {
     box-sizing: border-box;
@@ -72,7 +26,7 @@ img {
 body {
 
     height: 100vh;
-    font-family: 'Montserrat', sans-serif;
+    font-family: sans-serif;
     font-style: normal;
     font-weight: 300;
     min-width: 1500px;
@@ -105,7 +59,7 @@ h2 {
     padding: 0;
     margin: 0;
 
-    font-family: 'Montserrat', sans-serif;
+    font-family: sans-serif;
     font-style: normal;
     font-weight: 500;
 
@@ -241,6 +195,10 @@ h2 {
     display: none;
     background-color: #FFFFFF;
     color: #000000;
+}
+
+.dnone {
+    display: none;
 }
 
 /* hover для выделения столбца */
