--- a/springConverter/src/main/resources/public/css/style.css
+++ b/springConverter/src/main/resources/public/css/style.css
@@ -24,7 +24,7 @@ img {
 }
 
 body {
-
+    position: relative;
     height: 100vh;
     font-family: sans-serif;
     font-style: normal;
@@ -77,6 +77,13 @@ h2 {
     height: 100%;
 
     padding: 230px 600px 0px 240px;
+}
+
+.background {
+    z-index: -1;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
 
 
